--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
+    <!--https://github.com/jline/jline2-->
+    <dependency>
+      <groupId>jline</groupId>
+      <artifactId>jline</artifactId>
+      <version>2.14.2</version>
+    </dependency>
   </dependencies>
 
   <build>
